<resources>
    <string name="app_name">VrumVrum</string>

    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="carro">Carro</string>

    <string name="gerenciar_marcas">Gerenciar Marcas</string>
    <string name="gerenciar_modelos">Gerenciar Modelos</string>
    <string name="gerenciar_carros">Gerenciar Carro</string>

    <string name="dialog_excluir_marca">Deseja realmente excluir a marca?</string>
    <string name="dialog_excluir_modelo">Deseja realmente excluir o modelo?</string>
    <string name="dialog_excluir_carro">Deseja realmente excluir o carro?</string>

    <string name="listar">Listar</string>
    <string name="adicionar">Adicionar</string>
    <string name="salvar">Salvar</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>

    <string name="nome">Nome*</string>
    <string name="renavam">Renavam*</string>
    <string name="placa">Placa*</string>
    <string name="valor">Valor*</string>
    <string name="ano">Ano*</string>

    <string name="selecione_a_marca">Selecione a Marca*</string>
    <string name="selecione_o_modelo">Selecione o Modelo*</string>
    <string name="selecione_o_carro">Selecione o Carro*</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>